--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.9.1",
+    "filesize": "^6.1.0",
+    "moment": "^2.29.1",
     "nanoid": "^1.2.2",
     "nuxt": "^2.14.12"
   },
