--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vuetify": "^2.4.5"
   }
 }
