--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "virtual_host-client",
+  "name": "popcat-active",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -23,13 +23,11 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.9.1",
-    "filesize": "^7.0.0",
     "moment": "^2.29.1",
-    "nanoid": "^1.2.2",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "query-string": "^7.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
