--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
       - name: Install and Build
+        env:
+          POP_API_HOST: ${{ secrets.POP_API_HOST }}
         run: |
           npm ci
           npm run build
