--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.9.1",
+    "jsdom-global": "^3.0.2",
     "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "query-string": "^7.0.1",
