--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.9.1",
+    "js-base64": "^3.6.1",
     "jsdom-global": "^3.0.2",
+    "json-bigint": "^1.0.0",
     "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "query-string": "^7.0.1",
