feat: update configuration for HTTPS

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 HTTPS=no
+HTTPS_KEY=/somewhere.key
+HTTPS_CERT=/somewhere.pem
 POP_API_HOST=https://example.com
-SEND_DELAY=5000
+SEND_DELAY=1000
 MAX_POPS=800
