feat: update COPYING

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "bignumber.js": "^9.0.1",
     "core-js": "^3.16.3",
     "js-base64": "^3.6.1",
-    "jsdom-global": "^3.0.2",
     "json-bigint": "^1.0.0",
     "moment": "^2.29.1",
     "nuxt": "^2.14.12",
@@ -54,6 +53,8 @@
     "eslint-plugin-vue": "^7.7.0",
     "husky": "^7.0.2",
     "jest": "^27.0.6",
+    "jsdom": "^17.0.0",
+    "jsdom-global": "^3.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.2.1",
     "stylelint": "^13.9.0",
