--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/recaptcha": "^1.0.4",
     "bignumber.js": "^9.0.1",
     "core-js": "^3.16.3",
     "js-base64": "^3.6.1",
