--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,4 +1,4 @@
-name: main
+name: integrate
 
 on:
   push:
@@ -35,20 +35,3 @@ jobs:
         run: npm run lint
       - name: Run tests 🧪
         run: npm run test
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.4
-      - name: Install and Build
-        env:
-          POP_API_HOST: ${{ secrets.POP_API_HOST }}
-        run: |
-          npm ci
-          npm run build
-          npm run generate
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages
-          folder: dist
