--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-sse": "^2.4.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@nuxtjs/eslint-config": "^7.0.0",
@@ -47,11 +48,11 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.5",
     "dotenv": "^10.0.0",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.19.1",
+    "eslint-plugin-vue": "^8.0.3",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
     "jsdom": "^18.0.0",
