chore: update .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_ECHO_API_BASE_URL="https://popsenzawa-echo.randychen.tk"
+VITE_ECHO_API_BASE_URL="https://popsenzawa-echo.shiranui.xyz"
 VITE_RECAPTCHA_SITE_KEY=""
 VITE_POP_MAX_COUNT_APPEND="800"
 VITE_POP_SEND_DELAY="5000"
